<resources>
    <string name="CronetProviderClassName">com.google.android.gms.net.PlayServicesCronetProvider</string>
    <string name="abc_action_bar_home_description">Navigate home</string>
    <string name="abc_action_bar_up_description">Navigate up</string>
    <string name="abc_action_menu_overflow_description">More options</string>
    <string name="abc_action_mode_done">Done</string>
    <string name="abc_activity_chooser_view_see_all">See all</string>
    <string name="abc_activitychooserview_choose_application">Choose an app</string>
    <string name="abc_capital_off">OFF</string>
    <string name="abc_capital_on">ON</string>
    <string name="abc_menu_alt_shortcut_label">Alt+</string>
    <string name="abc_menu_ctrl_shortcut_label">Ctrl+</string>
    <string name="abc_menu_delete_shortcut_label">delete</string>
    <string name="abc_menu_enter_shortcut_label">enter</string>
    <string name="abc_menu_function_shortcut_label">Function+</string>
    <string name="abc_menu_meta_shortcut_label">Meta+</string>
    <string name="abc_menu_shift_shortcut_label">Shift+</string>
    <string name="abc_menu_space_shortcut_label">space</string>
    <string name="abc_menu_sym_shortcut_label">Sym+</string>
    <string name="abc_prepend_shortcut_label">Menu+</string>
    <string name="abc_search_hint">Search…</string>
    <string name="abc_searchview_description_clear">Clear query</string>
    <string name="abc_searchview_description_query">Search query</string>
    <string name="abc_searchview_description_search">Search</string>
    <string name="abc_searchview_description_submit">Submit query</string>
    <string name="abc_searchview_description_voice">Voice search</string>
    <string name="abc_shareactionprovider_share_with">Share with</string>
    <string name="abc_shareactionprovider_share_with_application">Share with %s</string>
    <string name="abc_toolbar_collapse_description">Collapse</string>
    <string name="about_one_year_ago">about 1 year ago</string>
    <string name="account_deletion">Delete My Account</string>
    <string name="account_deletion_continue">Continue</string>
    <string name="account_deletion_copy_part_1">Account deletion is permanent and cannot be reversed. </string>
    <string name="account_deletion_copy_part_10">Understand your privacy. </string>
    <string name="account_deletion_copy_part_11">This request is separate from any other data privacy rights you may have given your residency. To see a full profile of your data control rights and additional actions you can take, please refer to our </string>
    <string name="account_deletion_copy_part_2">If you delete your account, you\'ll lose access to it, in addition to any information associated with it - including watchlists, watch history, playhead positions, commenting, and other user generated content.\n\n</string>
    <string name="account_deletion_copy_part_3">Account deletion </string>
    <string name="account_deletion_copy_part_4">IS NOT </string>
    <string name="account_deletion_copy_part_5">a subscription cancellation. </string>
    <string name="account_deletion_copy_part_6">Account deletion is a privacy feature that gives you more control over your data. If you delete your account, you\'ll still be a subscribed Crunchyroll user. </string>
    <string name="account_deletion_copy_part_7">Canceling your subscription is an additional step</string>
    <string name="account_deletion_copy_part_8">.\n\nIf you want to unsubscribe from Crunchyroll and you signed up through the app, you can cancel your subscription through your Android device. If you subscribed a different way, please </string>
    <string name="account_deletion_copy_part_9"> for cancelation instructions.\n\n</string>
    <string name="account_deletion_delete">Delete Account</string>
    <string name="account_deletion_dialog_copy">You must cancel your subscription before deleting your account. If you have done so already, are you sure you want to delete your account?</string>
    <string name="account_deletion_not_now">Not now</string>
    <string name="account_deletion_privacy">Privacy Policy</string>
    <string name="account_deletion_privacy_url">https://www.crunchyroll.com/privacy/index.html</string>
    <string name="account_deletion_support">refer to Crunchyroll support</string>
    <string name="account_deletion_support_url">https://help.crunchyroll.com/hc/en-us/articles/204538129-How-do-I-cancel-my-membership-</string>
    <string name="acknowledge">Acknowledge</string>
    <string name="action_cancel_download">Stop</string>
    <string name="action_change">Change</string>
    <string name="action_change_preferences">Change Preferences</string>
    <string name="action_pause_download">Pause</string>
    <string name="action_remove_all">Remove All</string>
    <string name="action_remove_download">Remove</string>
    <string name="action_renew_download">Renew Access</string>
    <string name="action_retry_download">Retry</string>
    <string name="action_stop_all">Stop All</string>
    <string name="action_sync_all">Sync All</string>
    <string name="action_sync_unwatched">Sync Unwatched</string>
    <string name="active_subscription_label">Active Subscription</string>
    <string name="add_to_watchlist">Add to Watchlist</string>
    <string name="added_to_watchlist">Added to Watchlist</string>
    <string name="ads_are_annoying">Ads are annoying</string>
    <string name="all_tab_name">All anime</string>
    <string name="already_have_an_account">Already have an account?</string>
    <string name="amazon_create_account_label">To create an account please visit</string>
    <string name="androidx_startup">androidx.startup</string>
    <string name="app_name">Crunchyroll</string>
    <string name="appbar_scrolling_view_behavior">com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior</string>
    <string name="artist_cta_play_concerts">Play Concerts</string>
    <string name="artist_cta_play_music_videos">Play Music Videos</string>
    <string name="artist_details_duration">Duration</string>
    <string name="artist_details_duration_format">%1$s, %2$s</string>
    <string name="artist_details_genres">Genres</string>
    <string name="artist_details_publisher">Publisher</string>
    <string name="artist_no_videos_explore_cta">Explore our library</string>
    <string name="artist_no_videos_subtitle">We don\'t have videos for this artist yet. The good news? We\'re adding videos to our library every day.</string>
    <string name="audio">Audio</string>
    <string name="autoplay">Autoplay</string>
    <string name="bottom_navigation_tab_account">Account</string>
    <string name="bottom_navigation_tab_browse">Browse</string>
    <string name="bottom_navigation_tab_cr_store">Store</string>
    <string name="bottom_navigation_tab_home">Home</string>
    <string name="bottom_navigation_tab_my_lists">My Lists</string>
    <string name="bottom_navigation_tab_simulcast">Simulcasts</string>
    <string name="category_app_experience">App Experience</string>
    <string name="category_offline_viewing">Offline Viewing</string>
    <string name="category_preferences">Preferences</string>
    <string name="category_privacy">Privacy</string>
    <string name="category_support">Support</string>
    <string name="change_email">Change Email</string>
    <string name="change_password_screen_title">Change Password</string>
    <string name="change_phone">Change Phone</string>
    <string name="channel_name_content_updates">Content Updates</string>
    <string name="channel_name_general_updates">General Updates</string>
    <string name="channel_name_promotional_updates">Promotional Updates</string>
    <string name="connected_apps_screen_title">Connected Apps</string>
    <string name="crunchylist_add_series_to_this_crunchylist">Add to this Crunchylist by searching for a series or from an anime’s page.</string>
    <string name="crunchylist_is_empty">Your Crunchylist is Empty</string>
    <string name="crunchylist_need_help">Need help? Start with our most %s.</string>
    <string name="crunchylist_search_for_anime">Search for anime</string>
    <string name="do_not_sell_my_personal_information">Do not sell my personal information</string>
    <string name="email">Email</string>
    <string name="help_center">Help Center</string>
    <string name="key_account_deletion">account_deletion</string>
    <string name="key_audio">key_audio</string>
    <string name="key_auto_play">key_auto_play</string>
    <string name="key_category_offline_viewing">category_offline_viewing</string>
    <string name="key_category_privacy">category_privacy</string>
    <string name="key_change_email">change_email</string>
    <string name="key_change_password">change_password</string>
    <string name="key_change_phone">change_phone</string>
    <string name="key_connected_apps">connected_apps</string>
    <string name="key_content_updates">content_updates</string>
    <string name="key_do_not_sell">do_not_sell_my_personal_information</string>
    <string name="key_general_updates">general_updates</string>
    <string name="key_help_center">help_center</string>
    <string name="key_log_out">log_out</string>
    <string name="key_maturity_restrictions">maturity_restrictions</string>
    <string name="key_membership_card">membership_card</string>
    <string name="key_membership_plan">membership_plan</string>
    <string name="key_notifications">notifications</string>
    <string name="key_persistent_message_center">persistent_message_center</string>
    <string name="key_preferred_audio_language">preferred_audio_language</string>
    <string name="key_preferred_subtitle_cc_language">preferred_subtitle_cc_language</string>
    <string name="key_promotional_updates">promo_updates</string>
    <string name="key_quality">key_quality</string>
    <string name="key_redeem_promo_code">redeem_promo_code</string>
    <string name="key_report_a_problem">key_report_a_problem</string>
    <string name="key_show_closed_captions">show_closed_captions</string>
    <string name="key_show_mature_content">show_mature_content</string>
    <string name="key_subtitles">key_subtitles</string>
    <string name="key_switch_profile">switch_profiles</string>
    <string name="key_switch_stream_over_cellular">stream_over_cellular</string>
    <string name="key_switch_sync_over_cellular">sync_over_cellular</string>
    <string name="key_sync_quality">sync_quality</string>
    <string name="key_whatsapp_help">whatsapp_help</string>
    <string name="label_notification_settings">Notification Settings</string>
    <string name="maturity_restrictions">Maturity Restrictions</string>
    <string name="membership">Membership</string>
    <string name="membership_card">My Membership Card</string>
    <string name="membership_plan">Membership Plan</string>
    <string name="password">Password</string>
    <string name="persistent_message_center_notifications">Notifications</string>
    <string name="phone">Phone</string>
    <string name="preferred_audio_language">Audio Language</string>
    <string name="preferred_subtitle_cc_language">Subtitles/CC Language</string>
    <string name="quality">Quality</string>
    <string name="redeem_promo_code">Redeem Promo Code</string>
    <string name="report_a_problem">Report a Problem</string>
    <string name="show_closed_captions">Show Closed Captions</string>
    <string name="show_mature_content">Show Mature Content</string>
    <string name="sign_out">Log Out</string>
    <string name="stream_over_cellular">Stream Using Cellular</string>
    <string name="subscription">Subscription</string>
    <string name="subtitles">Subtitles/CC</string>
    <string name="switch_profile">Switch Profile</string>
    <string name="sync_over_cellular">Sync Using Cellular</string>
    <string name="sync_quality">Sync Quality</string>
    <string name="whatsapp_help">Get Support on WhatsApp</string>
</resources>