<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto" android:gravity="top|center_horizontal" android:layout_width="match_parent" android:layout_height="wrap_content">
    <com.ellation.crunchyroll.presentation.main.BottomNavigationTabItemLayout android:id="@+id/tab_home" android:layout_height="wrap_content" app:navigation_item_icon="@drawable/selector_bottom_navigation_home" app:navigation_item_text="@string/bottom_navigation_tab_home" style="@style/TabBarItem"/>
    <com.ellation.crunchyroll.presentation.main.BottomNavigationTabItemLayout android:id="@+id/tab_my_lists" android:layout_height="wrap_content" app:navigation_item_icon="@drawable/selector_bottom_navigation_watchlist" app:navigation_item_text="@string/bottom_navigation_tab_my_lists" style="@style/TabBarItem"/>
    <com.ellation.crunchyroll.presentation.main.BottomNavigationTabItemLayout android:id="@+id/tab_browse" android:layout_height="wrap_content" app:navigation_item_icon="@drawable/selector_bottom_navigation_browse" app:navigation_item_text="@string/bottom_navigation_tab_browse" style="@style/TabBarItem"/>
    <com.ellation.crunchyroll.presentation.main.BottomNavigationTabItemLayout android:id="@+id/tab_simulcast" android:layout_height="wrap_content" app:navigation_item_icon="@drawable/selector_bottom_navigation_simulcast" app:navigation_item_text="@string/bottom_navigation_tab_simulcast" style="@style/TabBarItem"/>
    <com.ellation.crunchyroll.presentation.main.BottomNavigationTabItemLayout android:id="@+id/tab_cr_store" android:visibility="gone" android:layout_height="wrap_content" app:navigation_item_icon="@drawable/selector_bottom_navigation_cr_store" app:navigation_item_text="@string/bottom_navigation_tab_cr_store" style="@style/TabBarItem"/>
    <com.ellation.crunchyroll.presentation.main.BottomNavigationTabItemLayout android:id="@+id/tab_settings" android:layout_height="wrap_content" app:navigation_item_icon="@drawable/selector_bottom_navigation_settings" app:navigation_item_text="@string/bottom_navigation_tab_account" style="@style/TabBarItem"/>
</LinearLayout>
